# rceval

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: benchmark_cases.jsonl  benchmark_cases.yaml  rgen_like_tasks.jsonl
examples/predictions/: bad_predictions.jsonl  baseline_predictions.jsonl
rceval/: __init__.py  cli.py  io.py  metrics.py  report.py  safety_judge.py  schemas.py  scoring.py  validators.py
rceval/datasets/: __init__.py  samples.py
rceval/importers/: __init__.py  rgen.py
rceval/planners/: __init__.py  oracle.py  safe_baseline.py  unsafe_baseline.py
tests/: test_cli.py  test_io.py  test_metrics.py  test_report.py  test_rgen_import.py  test_safety_judge.py  test_schemas.py  test_scoring.py  test_validators.py
